# serialport

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  serialport.cpp
test/: CMakeLists.txt  test.cpp
